Revert "Stop the map overlapping the top bar"
This reverts commit 2ef2d7c876168d6beb606b655470f48ffabc8841.

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -455,7 +455,7 @@ body.site-export #tabnav a#exportanchor {
 
 .site-index .leaflet-top,
 .site-export .leaflet-top {
-  top: 10px !important;
+  top: 40px !important;
 
   .leaflet-control {
     margin-top: 0px !important;
@@ -679,11 +679,16 @@ body.site-export #tabnav a#exportanchor {
 .site-index #content,
 .site-export #content {
   position: fixed;
+  margin-top: 0px;
   left: 0px;
   right: 0px;
   top: 0px;
   bottom: 0px;
   padding: 0px;
+}
+
+.site-edit #content {
+  top: 30px;
 }
 
 #slim_container {
